ingress/nginx/central-nginx-encrypt-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/backend-protocol: "GRPCS"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
  name: central-ingress
  namespace: stackrox
spec:
  rules:
  - host: central.example.com
    http:
      paths:
      - backend:
          serviceName: central
          servicePort: 443
  tls:
  - secretName: central-default-tls-cert
    hosts:
    - central.example.com
